--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "src/index.ts",
   "scripts": {
-    "start": "ts-node src/index.ts",
+    "start:dev": "ts-node src/run.ts",
+    "start:cron": "node ./out/src/schedule.js",
     "build": "tsc"
-  }, 
+  },
   "engines": {
     "node": ">=18.16.1",
     "npm": ">=8.19.0"
@@ -17,9 +18,12 @@
   "devDependencies": {
     "@playwright/test": "^1.40.0",
     "@types/node": "^20.9.3",
+    "@types/node-cron": "^3.0.11",
     "ts-node": "^10.9.1"
   },
   "dependencies": {
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "node-cron": "^3.0.3",
+    "node-windows": "^1.0.0-beta.8"
   }
 }
